src/lib/mongo/mongoParser.ts
// Generated from dt-sql-parser/src/grammar/mongo/mongo.g4 by ANTLR 4.13.1

// @ts-nocheck

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { mongoListener } from "./mongoListener.js";
import { mongoVisitor } from "./mongoVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class mongoParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly T__4 = 5;
    public static readonly T__5 = 6;
    public static readonly SingleLineComment = 7;
    public static readonly MultiLineComment = 8;
    public static readonly StringLiteral = 9;
    public static readonly NullLiteral = 10;
    public static readonly BooleanLiteral = 11;
    public static readonly NumericLiteral = 12;
    public static readonly DecimalLiteral = 13;
    public static readonly HexIntegerLiteral = 14;
    public static readonly OctalIntegerLiteral = 15;
    public static readonly OctalIntegerLiteral2 = 16;
    public static readonly BinaryIntegerLiteral = 17;
    public static readonly BigHexIntegerLiteral = 18;
    public static readonly BigOctalIntegerLiteral = 19;
    public static readonly BigBinaryIntegerLiteral = 20;
    public static readonly BigDecimalIntegerLiteral = 21;
    public static readonly LineTerminator = 22;
    public static readonly SEMICOLON = 23;
    public static readonly DOT = 24;
    public static readonly DB = 25;
    public static readonly LF = 26;
    public static readonly CRLF = 27;
    public static readonly OPEN_BRACKET = 28;
    public static readonly CLOSED_BRACKET = 29;
    public static readonly STRING_LITERAL = 30;
    public static readonly WhiteSpaces = 31;
    public static readonly RULE_program = 0;
    public static readonly RULE_mongoCommands = 1;
    public static readonly RULE_commands = 2;
    public static readonly RULE_command = 3;
    public static readonly RULE_emptyCommand = 4;
    public static readonly RULE_collection = 5;
    public static readonly RULE_functionCall = 6;
    public static readonly RULE_functionName = 7;
    public static readonly RULE_collectionName = 8;
    public static readonly RULE_arguments = 9;
    public static readonly RULE_argumentList = 10;
    public static readonly RULE_objectLiteral = 11;
    public static readonly RULE_arrayLiteral = 12;
    public static readonly RULE_elementList = 13;
    public static readonly RULE_propertyNameAndValueList = 14;
    public static readonly RULE_propertyAssignment = 15;
    public static readonly RULE_propertyValue = 16;
    public static readonly RULE_literal = 17;
    public static readonly RULE_propertyName = 18;
    public static readonly RULE_comment = 19;

    public static readonly literalNames = [
        null, "'('", "','", "')'", "'{'", "'}'", "':'", null, null, null, 
        "'null'", null, null, null, null, null, null, null, null, null, 
        null, null, null, "';'", "'.'", "'db'", "'\\n'", "'\\r\\n'", "'['", 
        "']'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, null, null, "SingleLineComment", "MultiLineComment", 
        "StringLiteral", "NullLiteral", "BooleanLiteral", "NumericLiteral", 
        "DecimalLiteral", "HexIntegerLiteral", "OctalIntegerLiteral", "OctalIntegerLiteral2", 
        "BinaryIntegerLiteral", "BigHexIntegerLiteral", "BigOctalIntegerLiteral", 
        "BigBinaryIntegerLiteral", "BigDecimalIntegerLiteral", "LineTerminator", 
        "SEMICOLON", "DOT", "DB", "LF", "CRLF", "OPEN_BRACKET", "CLOSED_BRACKET", 
        "STRING_LITERAL", "WhiteSpaces"
    ];
    public static readonly ruleNames = [
        "program", "mongoCommands", "commands", "command", "emptyCommand", 
        "collection", "functionCall", "functionName", "collectionName", 
        "arguments", "argumentList", "objectLiteral", "arrayLiteral", "elementList", 
        "propertyNameAndValueList", "propertyAssignment", "propertyValue", 
        "literal", "propertyName", "comment",
    ];

    public get grammarFileName(): string { return "mongo.g4"; }
    public get literalNames(): (string | null)[] { return mongoParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return mongoParser.symbolicNames; }
    public get ruleNames(): string[] { return mongoParser.ruleNames; }
    public get serializedATN(): number[] { return mongoParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, mongoParser._ATN, mongoParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, mongoParser.RULE_program);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 40;
            this.mongoCommands();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public mongoCommands(): MongoCommandsContext {
        let localContext = new MongoCommandsContext(this.context, this.state);
        this.enterRule(localContext, 2, mongoParser.RULE_mongoCommands);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 42;
            this.commands();
            this.state = 43;
            this.match(mongoParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public commands(): CommandsContext {
        let localContext = new CommandsContext(this.context, this.state);
        this.enterRule(localContext, 4, mongoParser.RULE_commands);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 48;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                this.state = 48;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case mongoParser.DB:
                    {
                    this.state = 45;
                    this.command();
                    }
                    break;
                case mongoParser.SEMICOLON:
                    {
                    this.state = 46;
                    this.emptyCommand();
                    }
                    break;
                case mongoParser.SingleLineComment:
                case mongoParser.MultiLineComment:
                    {
                    this.state = 47;
                    this.comment();
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                }
                this.state = 50;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 41943424) !== 0));
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public command(): CommandContext {
        let localContext = new CommandContext(this.context, this.state);
        this.enterRule(localContext, 6, mongoParser.RULE_command);
        try {
            this.state = 67;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 4, this.context) ) {
            case 1:
                localContext = new DbFunctionCallContext(localContext);
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 52;
                this.match(mongoParser.DB);
                this.state = 53;
                this.match(mongoParser.DOT);
                {
                this.state = 54;
                this.functionCall();
                }
                this.state = 56;
                this.errorHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this.tokenStream, 2, this.context) ) {
                case 1:
                    {
                    this.state = 55;
                    this.match(mongoParser.SEMICOLON);
                    }
                    break;
                }
                }
                break;
            case 2:
                localContext = new DbCollectionFunctionCallContext(localContext);
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 58;
                this.match(mongoParser.DB);
                this.state = 59;
                this.match(mongoParser.DOT);
                {
                this.state = 60;
                this.collection();
                this.state = 61;
                this.match(mongoParser.DOT);
                this.state = 62;
                this.functionCall();
                }
                this.state = 65;
                this.errorHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this.tokenStream, 3, this.context) ) {
                case 1:
                    {
                    this.state = 64;
                    this.match(mongoParser.SEMICOLON);
                    }
                    break;
                }
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public emptyCommand(): EmptyCommandContext {
        let localContext = new EmptyCommandContext(this.context, this.state);
        this.enterRule(localContext, 8, mongoParser.RULE_emptyCommand);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 69;
            this.match(mongoParser.SEMICOLON);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public collection(): CollectionContext {
        let localContext = new CollectionContext(this.context, this.state);
        this.enterRule(localContext, 10, mongoParser.RULE_collection);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 71;
            this.collectionName();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public functionCall(): FunctionCallContext {
        let localContext = new FunctionCallContext(this.context, this.state);
        this.enterRule(localContext, 12, mongoParser.RULE_functionCall);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 73;
            this.functionName();
            this.state = 74;
            this.arguments();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public functionName(): FunctionNameContext {
        let localContext = new FunctionNameContext(this.context, this.state);
        this.enterRule(localContext, 14, mongoParser.RULE_functionName);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 76;
            this.match(mongoParser.STRING_LITERAL);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public collectionName(): CollectionNameContext {
        let localContext = new CollectionNameContext(this.context, this.state);
        this.enterRule(localContext, 16, mongoParser.RULE_collectionName);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 78;
            this.match(mongoParser.STRING_LITERAL);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public arguments(): ArgumentsContext {
        let localContext = new ArgumentsContext(this.context, this.state);
        this.enterRule(localContext, 18, mongoParser.RULE_arguments);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 80;
            this.match(mongoParser.T__0);
            this.state = 92;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 268443152) !== 0)) {
                {
                this.state = 81;
                this.argumentList();
                this.state = 86;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 5, this.context);
                while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                    if (alternative === 1) {
                        {
                        {
                        this.state = 82;
                        this.match(mongoParser.T__1);
                        this.state = 83;
                        this.argumentList();
                        }
                        }
                    }
                    this.state = 88;
                    this.errorHandler.sync(this);
                    alternative = this.interpreter.adaptivePredict(this.tokenStream, 5, this.context);
                }
                this.state = 90;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 2) {
                    {
                    this.state = 89;
                    this.match(mongoParser.T__1);
                    }
                }

                }
            }

            this.state = 94;
            this.match(mongoParser.T__2);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public argumentList(): ArgumentListContext {
        let localContext = new ArgumentListContext(this.context, this.state);
        this.enterRule(localContext, 20, mongoParser.RULE_argumentList);
        try {
            this.state = 99;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case mongoParser.StringLiteral:
            case mongoParser.NullLiteral:
            case mongoParser.BooleanLiteral:
            case mongoParser.NumericLiteral:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 96;
                this.literal();
                }
                break;
            case mongoParser.T__3:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 97;
                this.objectLiteral();
                }
                break;
            case mongoParser.OPEN_BRACKET:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 98;
                this.arrayLiteral();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public objectLiteral(): ObjectLiteralContext {
        let localContext = new ObjectLiteralContext(this.context, this.state);
        this.enterRule(localContext, 22, mongoParser.RULE_objectLiteral);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 101;
            this.match(mongoParser.T__3);
            this.state = 103;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1073746432) !== 0)) {
                {
                this.state = 102;
                this.propertyNameAndValueList();
                }
            }

            this.state = 106;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 2) {
                {
                this.state = 105;
                this.match(mongoParser.T__1);
                }
            }

            this.state = 108;
            this.match(mongoParser.T__4);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public arrayLiteral(): ArrayLiteralContext {
        let localContext = new ArrayLiteralContext(this.context, this.state);
        this.enterRule(localContext, 24, mongoParser.RULE_arrayLiteral);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            {
            this.state = 110;
            this.match(mongoParser.OPEN_BRACKET);
            this.state = 114;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 11, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 111;
                    this.match(mongoParser.WhiteSpaces);
                    }
                    }
                }
                this.state = 116;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 11, this.context);
            }
            this.state = 117;
            this.elementList();
            this.state = 121;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 118;
                this.match(mongoParser.WhiteSpaces);
                }
                }
                this.state = 123;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 124;
            this.match(mongoParser.CLOSED_BRACKET);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public elementList(): ElementListContext {
        let localContext = new ElementListContext(this.context, this.state);
        this.enterRule(localContext, 26, mongoParser.RULE_elementList);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 129;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 13, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 126;
                    this.match(mongoParser.T__1);
                    }
                    }
                }
                this.state = 131;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 13, this.context);
            }
            this.state = 133;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1342184976) !== 0)) {
                {
                this.state = 132;
                this.propertyValue();
                }
            }

            this.state = 143;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 16, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 136;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                    do {
                        {
                        {
                        this.state = 135;
                        this.match(mongoParser.T__1);
                        }
                        }
                        this.state = 138;
                        this.errorHandler.sync(this);
                        _la = this.tokenStream.LA(1);
                    } while (_la === 2);
                    this.state = 140;
                    this.propertyValue();
                    }
                    }
                }
                this.state = 145;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 16, this.context);
            }
            this.state = 149;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2) {
                {
                {
                this.state = 146;
                this.match(mongoParser.T__1);
                }
                }
                this.state = 151;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public propertyNameAndValueList(): PropertyNameAndValueListContext {
        let localContext = new PropertyNameAndValueListContext(this.context, this.state);
        this.enterRule(localContext, 28, mongoParser.RULE_propertyNameAndValueList);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 152;
            this.propertyAssignment();
            this.state = 157;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 18, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 153;
                    this.match(mongoParser.T__1);
                    this.state = 154;
                    this.propertyAssignment();
                    }
                    }
                }
                this.state = 159;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 18, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public propertyAssignment(): PropertyAssignmentContext {
        let localContext = new PropertyAssignmentContext(this.context, this.state);
        this.enterRule(localContext, 30, mongoParser.RULE_propertyAssignment);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 160;
            this.propertyName();
            this.state = 161;
            this.match(mongoParser.T__5);
            this.state = 162;
            this.propertyValue();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public propertyValue(): PropertyValueContext {
        let localContext = new PropertyValueContext(this.context, this.state);
        this.enterRule(localContext, 32, mongoParser.RULE_propertyValue);
        try {
            this.state = 168;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case mongoParser.StringLiteral:
            case mongoParser.NullLiteral:
            case mongoParser.BooleanLiteral:
            case mongoParser.NumericLiteral:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 164;
                this.literal();
                }
                break;
            case mongoParser.OPEN_BRACKET:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 165;
                this.arrayLiteral();
                }
                break;
            case mongoParser.T__3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 166;
                this.objectLiteral();
                }
                break;
            case mongoParser.STRING_LITERAL:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 167;
                this.functionCall();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public literal(): LiteralContext {
        let localContext = new LiteralContext(this.context, this.state);
        this.enterRule(localContext, 34, mongoParser.RULE_literal);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 170;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 7680) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public propertyName(): PropertyNameContext {
        let localContext = new PropertyNameContext(this.context, this.state);
        this.enterRule(localContext, 36, mongoParser.RULE_propertyName);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 172;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 1073746432) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public comment(): CommentContext {
        let localContext = new CommentContext(this.context, this.state);
        this.enterRule(localContext, 38, mongoParser.RULE_comment);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 174;
            _la = this.tokenStream.LA(1);
            if(!(_la === 7 || _la === 8)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }


    private static __ATN: antlr.ATN;
    public static get _ATN(): antlr.ATN {
        if (!mongoParser.__ATN) {
            mongoParser.__ATN = new antlr.ATNDeserializer().deserialize(mongoParser._serializedATN);
        }

        return mongoParser.__ATN;
    }


    private static readonly vocabulary = new antlr.Vocabulary(mongoParser.literalNames, mongoParser.symbolicNames, []);

    public override get vocabulary(): antlr.Vocabulary {
        return mongoParser.vocabulary;
    }

    private static readonly decisionsToDFA = mongoParser._ATN.decisionToState.map( (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index) );
}

export class ProgramContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public mongoCommands(): MongoCommandsContext {
        return this.getRuleContext(0, MongoCommandsContext)!;
    }
    public override get ruleIndex(): number {
        return mongoParser.RULE_program;
    }
    public override enterRule(listener: mongoListener): void {
        if(listener.enterProgram) {
             listener.enterProgram(this);
        }
    }
    public override exitRule(listener: mongoListener): void {
        if(listener.exitProgram) {
             listener.exitProgram(this);
        }
    }
    public override accept<Result>(visitor: mongoVisitor<Result>): Result | null {
        if (visitor.visitProgram) {
            return visitor.visitProgram(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}

